static/style.css
:root {
    --primary: #386a04;
    --on-primary: #ffffff;
    --primary-container: #b8f483;
    --on-primary-container: #0d2000;

    --secondary: #57624a;
    --on-secondary: #ffffff;
    --secondary-container: #dae7c9;
    --on-secondary-container: #151e0c;

    --tertiary: #386664;
    --on-tertiary: #ffffff;
    --tertiary-container: #bbece9;
    --on-tertiary-container: #00201f;

    --error: #ba1a1a;
    --on-error: #ffffff;
    --error-container: #ffdad6;
    --on-error-container: #410002;

    --background: #fcfcff;
    --on-background: #1a1c1e;
    --outline: #72777f;
    --surface: #fdfdf5;
    --on-surface: #1a1c18;
    --surface-variant: #e0e4d6;
    --on-surface-variant: #44483e;

    background-color: var(--background);
}

html, body {
    margin: 0;
}

.grid-row {
    display: block;
    clear: both;
    margin-left: 15vw;
    margin-right: 15vw;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

.grid-row-no-margin {
    margin-left: 0;
    margin-right: 0;
    padding-top: 0;
    padding-bottom: 0;
}

.grid-column {
    box-sizing: border-box;
    width: 100%;
    padding: 0.5em;
}

.column-no-padding {
    padding: 0;
}

@media (min-width: 50em) {
    .column-one-quarter {
        width: 25%;
        float: left;
    }
}

@media (min-width: 50em) {
    .column-one-third {
        width: 33%;
        float: left;
    }
}

@media (min-width: 50em) {
    .column-two-thirds {
        width: 66%;
        float: left;
    }
}

@media (min-width: 50em) {
    .column-half {
        width: 50%;
        float: left;
    }
}

@media (min-width: 50em) {
    .column-full {
        width: 100%;
        float: left;
    }
}


.header {
    background-color: var(--on-background);
    display: block;
    clear: both;
    overflow: auto;
    position: sticky;
    top: 0;
    text-align: center;
    border-bottom: 5px solid var(--outline);
}

.footer {
    background-color: var(--on-background);
    display: block;
    clear: both;
    overflow: auto;
    text-align: center;
    border-top: 5px solid var(--outline);
}

.footer-link {
    display: inline;
    padding: 1rem;
    font-family: Montserrat, serif;
    font-size: small;
    font-weight: 600;
    color: var(--background);
}


.nav-link {
    display: inline;
    padding: 1rem;
    font-family: Montserrat, serif;
    font-size: medium;
    font-weight: 600;
    border-radius: 5px;
    color: var(--background);
}

.nav-link:hover {
    background-color: var(--primary);
    color: var(--on-primary);
}

.skip-navigation {
    position: absolute;
    left: -1000px;
    padding: 1rem;
    font-family: Montserrat, serif;
    font-size: medium;
    font-weight: 600;
    border-radius: 5px;
    color: var(--background);
}

.skip-navigation:focus {
    left: 10px;
}

a {
    color: inherit;
}


h1 {
    font-family: Montserrat, serif;
    font-size: xx-large;
    color: var(--on-background);
    margin-top: 0.5em;
}

p {
    font-family: Montserrat, serif;
    font-size: medium;
}

fieldset {
    border: 2px solid var(--on-background);
    border-radius: 5px;
}

legend {
    font-family: Montserrat, serif;
    font-size: large;
    font-weight: bold;
    color: var(--on-background);
}

.checkbox {
    width: 1.5em;
    height: 1.5em;
    display: inline;
    vertical-align: middle;
    font-family: Montserrat, serif;
    font-size: medium;
    cursor: pointer;
}

hr {
    color: var(--outline);
    display: block;
    clear: both;
    margin: 0;
    padding: 0;
}

:focus {
    outline-color: yellow;
    border-style: solid;
    border-color: yellow;
    border-width: 0.5em;
}

.button {
    font-family: Montserrat, serif;
    font-size: medium;
    font-weight: 600;
    padding: 10px;
    cursor: pointer;
    border-style: hidden;
    border-radius: 5px;
    text-decoration: none;
    background-color: transparent;
    margin-top: 10px;
    margin-bottom: 10px;
}

.button span {
    display: inline-block;
    vertical-align: middle;
}

.button-primary {
    border: 2px solid var(--primary);
    border-radius: 5px;
}

.button-secondary {
    border: 2px solid var(--secondary);
    border-radius: 5px;
}

.primary-solid {
    background-color: var(--primary);
    color: var(--on-primary);
}

.secondary-solid {
    background-color: var(--secondary);
    color: var(--on-secondary);
}

.blockquote {
    display: block;
    font-family: Montserrat, serif;
    font-size: medium;
    font-weight: 400;
    padding: 1em;
    border-radius: 5px;
    clear: both;
    float: left;
}

.blockquote-primary {
    background-color: var(--primary-container);
    color: var(--on-primary-container);
    border: 2px solid var(--primary);
}

.blockquote-secondary {
    background-color: var(--secondary-container);
    color: var(--on-secondary-container);
    border: 2px solid var(--secondary);
}

.blockquote-tertiary {
    background-color: var(--tertiary-container);
    color: var(--on-tertiary-container);
    border: 2px solid var(--tertiary);
}

.blockquote-cite {
    float: right;
    clear: right;
}

#citations {
    display: block;
    clear: both;
    color: var(--on-surface-variant);
}

.citations-container {
    background-color: var(--surface-variant);
    display: block;
    clear: both;
    overflow: auto;
}

.citations-list {
    text-decoration: none;
    list-style: none;
    font-family: Montserrat, serif;
    font-size: small;
    padding: 0;
    margin: 0.5em;
}

.primary-container {
    background-color: var(--primary-container);
    display: block;
    clear: both;
    overflow: auto;
    padding-bottom: 2em;
}

.on-primary-container {
    color: var(--on-primary-container);
}

ul {
    font-family: Montserrat, serif;
    list-style: square;
}

img {
    width: 100%;
    height: auto;
    object-fit: contain;
    overflow: hidden;
    max-height: 20rem;
}

details {
    font-family: Montserrat, serif;
    font-size: medium;
}

.email {
    border-left: 2px solid var(--on-background);
    border-right: 2px solid var(--on-background);
    list-style: none;
    padding-top: 10px;
    padding-bottom: 10px;
}

.email-top {
    border-top: 2px solid var(--on-background);
}

.email-bottom {
    border-bottom: 2px solid black;
}

.email-info {
    background-color: var(--tertiary-container);
    color: var(--on-tertiary-container);
    border: 2px solid var(--tertiary);
    margin: 0;
}

